@@ -1,5 +1,6 @@
 Revision history for Web::Components
 
+          - Adds fqdn to Util. Better rv in Model.error
           - Adds Model Navigation and ConfigLoader
           - Better error handling
           - Can set http headers in a redirect
